--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "eslint-plugin-prettier": "^2.6.0",
     "jsonlint": "^1.6.2",
     "prettier": "^1.10.2",
+    "react-hot-loader": "^3.1.3",
     "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^2.0.4"
+    "webpack-dev-middleware": "^2.0.4",
+    "webpack-hot-middleware": "^2.21.0"
   }
 }
