--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "node ./server/startDevServer.js"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "express": "^4.16.2",
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
