--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "cross-fetch": "^1.1.1",
     "express": "^4.16.2",
+    "knex": "^0.14.2",
+    "objection": "^0.9.4",
+    "pg": "^7.4.1",
+    "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
