--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Elliot Winkler <elliot.winkler@gmail.com>",
   "license": "ISC",
   "scripts": {
-    "dev": "node ./server/startDevServer.js"
+    "dev": "node ./server/startDevServer.js",
+    "build": "webpack --config webpack.prod.js",
+    "prod": "node ./server/startProdServer.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
@@ -27,13 +29,19 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.18",
     "eslint": "^4.17.0",
     "eslint-plugin-prettier": "^2.6.0",
+    "html-webpack-plugin": "^2.30.1",
     "jsonlint": "^1.6.2",
     "prettier": "^1.10.2",
+    "pug-loader": "^2.3.0",
     "react-hot-loader": "^3.1.3",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
     "webpack-dev-middleware": "^2.0.4",
-    "webpack-hot-middleware": "^2.21.0"
+    "webpack-hot-middleware": "^2.21.0",
+    "webpack-manifest-plugin": "^1.3.2",
+    "webpack-merge": "^4.1.1"
   }
 }
