--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cross-fetch": "^1.1.1",
     "express": "^4.16.2",
     "knex": "^0.14.2",
+    "morgan": "^1.9.0",
     "objection": "^0.9.4",
     "pg": "^7.4.1",
     "prop-types": "^15.6.0",
