--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "description": "Fakenstocks allows you to play the stock market virtually and keep track of your performance.",
   "author": "Elliot Winkler <elliot.winkler@gmail.com>",
   "license": "ISC",
+  "engines": {
+    "node": "8.x"
+  },
   "scripts": {
     "dev": "node ./server/startDevServer.js",
     "build": "webpack --config webpack.prod.js",
@@ -12,7 +15,13 @@
     "heroku-postbuild": "yarn run build"
   },
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.18",
     "cross-fetch": "^1.1.1",
     "express": "^4.16.2",
     "knex": "^0.14.2",
@@ -21,29 +30,23 @@
     "pg": "^7.4.1",
     "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
+    "pug-loader": "^2.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "uglifyjs-webpack-plugin": "^1.1.8",
+    "webpack": "^3.10.0",
+    "webpack-manifest-plugin": "^1.3.2",
+    "webpack-merge": "^4.1.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.18",
     "eslint": "^4.17.0",
     "eslint-plugin-prettier": "^2.6.0",
     "html-webpack-plugin": "^2.30.1",
     "jsonlint": "^1.6.2",
     "prettier": "^1.10.2",
-    "pug-loader": "^2.3.0",
     "react-hot-loader": "^3.1.3",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "webpack": "^3.10.0",
     "webpack-dev-middleware": "^2.0.4",
-    "webpack-hot-middleware": "^2.21.0",
-    "webpack-manifest-plugin": "^1.3.2",
-    "webpack-merge": "^4.1.1"
+    "webpack-hot-middleware": "^2.21.0"
   }
 }
