Ensure that react-hot-loader is not used in production
* Don't wrap our root React component in AppContainer in prod mode
* Only include react-hot-loader Babel plugin in dev mode

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
+  "env": {
+    "development": {
+      "plugins": ["react-hot-loader/babel"]
+    }
+  },
   "presets": [
     ["env", {"modules": false}],
     "react"
-  ],
-  "plugins": ["react-hot-loader/babel"]
+  ]
 }
