--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
     "cross-fetch": "^1.1.1",
+    "css-loader": "^0.28.9",
     "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "knex": "^0.14.2",
     "morgan": "^1.9.0",
     "objection": "^0.9.4",
@@ -32,8 +34,10 @@
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
     "react": "^16.2.0",
+    "react-css-modules": "^4.7.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "style-loader": "^0.20.1",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
     "webpack-manifest-plugin": "^1.3.2",
