--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "css-loader": "^0.28.9",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
     "knex": "^0.14.2",
+    "material-design-icons": "^3.0.1",
     "morgan": "^1.9.0",
     "objection": "^0.9.4",
     "pg": "^7.4.1",
@@ -37,6 +39,7 @@
     "react-css-modules": "^4.7.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "rmwc": "^1.1.2",
     "style-loader": "^0.20.1",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
