--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "knex": "^0.14.2",
     "material-design-icons": "^3.0.1",
     "morgan": "^1.9.0",
+    "normalize.css": "^8.0.0",
     "objection": "^0.9.4",
     "pg": "^7.4.1",
     "prop-types": "^15.6.0",
