Add PostCSS and CSSNext
I'm not sure how CSSNext will interplay with CSS Modules, but we'll see.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "caniuse-lite": "^1.0.30000805",
     "clean-webpack-plugin": "^0.1.18",
     "cross-fetch": "^1.1.1",
     "css-loader": "^0.28.9",
@@ -33,6 +34,8 @@
     "normalize.css": "^8.0.0",
     "objection": "^0.9.4",
     "pg": "^7.4.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^2.1.0",
     "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
