--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,9 @@
   "env": {
     "development": {
       "plugins": ["react-hot-loader/babel"]
+    },
+    "test": {
+      "presets": ["env", "react"]
     }
   },
   "presets": [
