--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,10 @@
 {
+  "extends": "eslint:recommended",
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
-  "extends": "eslint:recommended",
   "parserOptions": {
     "ecmaVersion": 2017,
     "sourceType": "module",
