--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "node ./server/startDevServer.js",
     "build": "webpack --config webpack.prod.js",
     "prod": "node ./server/startProdServer.js",
-    "heroku-postbuild": "yarn run build"
+    "heroku-postbuild": "yarn run build",
+    "test": "jest"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -51,12 +52,19 @@
     "webpack-merge": "^4.1.1"
   },
   "devDependencies": {
+    "babel-jest": "^22.2.2",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.17.0",
     "eslint-plugin-prettier": "^2.6.0",
     "html-webpack-plugin": "^2.30.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^22.2.2",
+    "jest-enzyme": "^4.2.0",
     "jsonlint": "^1.6.2",
     "prettier": "^1.10.2",
     "react-hot-loader": "^3.1.3",
+    "react-test-renderer": "^16.2.0",
     "webpack-dev-middleware": "^2.0.4",
     "webpack-hot-middleware": "^2.21.0"
   }
