--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "node": "8.x"
   },
   "scripts": {
-    "dev": "node ./server/startDevServer.js",
+    "dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "prod": "node ./server/startProdServer.js",
     "heroku-postbuild": "yarn run build",
     "test": "jest"
   },
@@ -29,12 +28,9 @@
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
-    "knex": "^0.14.2",
     "material-design-icons": "^3.0.1",
     "morgan": "^1.9.0",
     "normalize.css": "^8.0.0",
-    "objection": "^0.9.4",
-    "pg": "^7.4.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.0",
     "prop-types": "^15.6.0",
@@ -66,6 +62,7 @@
     "react-hot-loader": "^3.1.3",
     "react-test-renderer": "^16.2.0",
     "webpack-dev-middleware": "^2.0.4",
+    "webpack-dev-server": "^2.11.1",
     "webpack-hot-middleware": "^2.21.0"
   }
 }
