--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-router-dom": "^4.2.2",
     "rmwc": "^1.1.2",
     "style-loader": "^0.20.1",
+    "typeface-roboto": "^0.0.54",
+    "typeface-roboto-condensed": "^0.0.54",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
     "webpack-manifest-plugin": "^1.3.2",
