--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
+    "babel-plugin-lodash": "^3.3.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
@@ -28,6 +29,7 @@
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
+    "lodash": "^4.17.5",
     "material-design-icons": "^3.0.1",
     "morgan": "^1.9.0",
     "normalize.css": "^8.0.0",
