Teach Babel about the object rest spread syntax
I actually thought this was built in now, but I guess it isn't.

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
   "env": {
     "development": {
-      "plugins": ["react-hot-loader/babel", "lodash"]
+      "plugins": [
+        "react-hot-loader/babel",
+        "lodash",
+        "transform-object-rest-spread"
+      ]
     },
     "test": {
       "presets": ["env", "react"]
