--- a/package.json
+++ b/package.json
@@ -40,15 +40,19 @@
     "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
+    "rc-tooltip": "^3.7.0",
     "react": "^16.2.0",
     "react-css-modules": "^4.7.1",
     "react-dom": "^16.2.0",
+    "react-overlays": "^0.8.3",
     "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.2.1",
     "rmwc": "^1.1.2",
     "style-loader": "^0.20.1",
     "tone": "^0.12.63",
     "typeface-roboto": "^0.0.54",
     "typeface-roboto-condensed": "^0.0.54",
+    "typeface-roboto-slab": "^0.0.54",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
     "webpack-manifest-plugin": "^1.3.2",
