Ensure that the AudioContext is started
Some browsers require that the user provide some kind of input (like a
mouse click or tap) before playing any sound. Every so often, I've
noticed that sound doesn't work when you load the page, and whenever
this happens we're getting a warning from the browser in the console.

The `startaudiocontext` package ensures this by binding to the `mouseup`
or `touchend` event of the element you provide and then starting the
AudioContext thereafter. Hopefully it will solve this problem.

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.1",
     "rmwc": "^1.1.2",
+    "startaudiocontext": "^1.2.1",
     "style-loader": "^0.20.1",
     "tone": "0.11.x",
     "typeface-roboto": "^0.0.54",
