--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^16.2.0",
     "react-overlays": "^0.8.3",
     "react-router-dom": "^4.2.2",
+    "react-svg-loader": "^2.1.0",
     "react-transition-group": "^2.2.1",
     "rmwc": "^1.1.2",
     "startaudiocontext": "^1.2.1",
